; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/tcpdump/extr_print-pptp.c_pptp_sccrq_print.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/tcpdump/extr_print-pptp.c_pptp_sccrq_print.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pptp_msg_sccrq = type { i32*, i32*, i32*, i32*, i32*, i32*, i32*, i32* }

@.str = private unnamed_addr constant [3 x i8] c"%s\00", align 1
@tstr = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32*)* @pptp_sccrq_print to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @pptp_sccrq_print(i32* %0, i32* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca %struct.pptp_msg_sccrq*, align 8
  store i32* %0, i32** %3, align 8
  store i32* %1, i32** %4, align 8
  %6 = load i32*, i32** %4, align 8
  %7 = bitcast i32* %6 to %struct.pptp_msg_sccrq*
  store %struct.pptp_msg_sccrq* %7, %struct.pptp_msg_sccrq** %5, align 8
  %8 = load %struct.pptp_msg_sccrq*, %struct.pptp_msg_sccrq** %5, align 8
  %9 = getelementptr inbounds %struct.pptp_msg_sccrq, %struct.pptp_msg_sccrq* %8, i32 0, i32 7
  %10 = load i32*, i32** %9, align 8
  %11 = call i32 @ND_TCHECK(i32* %10)
  %12 = load i32*, i32** %3, align 8
  %13 = load %struct.pptp_msg_sccrq*, %struct.pptp_msg_sccrq** %5, align 8
  %14 = getelementptr inbounds %struct.pptp_msg_sccrq, %struct.pptp_msg_sccrq* %13, i32 0, i32 7
  %15 = call i32 @pptp_proto_ver_print(i32* %12, i32** %14)
  %16 = load %struct.pptp_msg_sccrq*, %struct.pptp_msg_sccrq** %5, align 8
  %17 = getelementptr inbounds %struct.pptp_msg_sccrq, %struct.pptp_msg_sccrq* %16, i32 0, i32 6
  %18 = load i32*, i32** %17, align 8
  %19 = call i32 @ND_TCHECK(i32* %18)
  %20 = load %struct.pptp_msg_sccrq*, %struct.pptp_msg_sccrq** %5, align 8
  %21 = getelementptr inbounds %struct.pptp_msg_sccrq, %struct.pptp_msg_sccrq* %20, i32 0, i32 5
  %22 = load i32*, i32** %21, align 8
  %23 = call i32 @ND_TCHECK(i32* %22)
  %24 = load i32*, i32** %3, align 8
  %25 = load %struct.pptp_msg_sccrq*, %struct.pptp_msg_sccrq** %5, align 8
  %26 = getelementptr inbounds %struct.pptp_msg_sccrq, %struct.pptp_msg_sccrq* %25, i32 0, i32 5
  %27 = call i32 @pptp_framing_cap_print(i32* %24, i32** %26)
  %28 = load %struct.pptp_msg_sccrq*, %struct.pptp_msg_sccrq** %5, align 8
  %29 = getelementptr inbounds %struct.pptp_msg_sccrq, %struct.pptp_msg_sccrq* %28, i32 0, i32 4
  %30 = load i32*, i32** %29, align 8
  %31 = call i32 @ND_TCHECK(i32* %30)
  %32 = load i32*, i32** %3, align 8
  %33 = load %struct.pptp_msg_sccrq*, %struct.pptp_msg_sccrq** %5, align 8
  %34 = getelementptr inbounds %struct.pptp_msg_sccrq, %struct.pptp_msg_sccrq* %33, i32 0, i32 4
  %35 = call i32 @pptp_bearer_cap_print(i32* %32, i32** %34)
  %36 = load %struct.pptp_msg_sccrq*, %struct.pptp_msg_sccrq** %5, align 8
  %37 = getelementptr inbounds %struct.pptp_msg_sccrq, %struct.pptp_msg_sccrq* %36, i32 0, i32 3
  %38 = load i32*, i32** %37, align 8
  %39 = call i32 @ND_TCHECK(i32* %38)
  %40 = load i32*, i32** %3, align 8
  %41 = load %struct.pptp_msg_sccrq*, %struct.pptp_msg_sccrq** %5, align 8
  %42 = getelementptr inbounds %struct.pptp_msg_sccrq, %struct.pptp_msg_sccrq* %41, i32 0, i32 3
  %43 = call i32 @pptp_max_channel_print(i32* %40, i32** %42)
  %44 = load %struct.pptp_msg_sccrq*, %struct.pptp_msg_sccrq** %5, align 8
  %45 = getelementptr inbounds %struct.pptp_msg_sccrq, %struct.pptp_msg_sccrq* %44, i32 0, i32 2
  %46 = load i32*, i32** %45, align 8
  %47 = call i32 @ND_TCHECK(i32* %46)
  %48 = load i32*, i32** %3, align 8
  %49 = load %struct.pptp_msg_sccrq*, %struct.pptp_msg_sccrq** %5, align 8
  %50 = getelementptr inbounds %struct.pptp_msg_sccrq, %struct.pptp_msg_sccrq* %49, i32 0, i32 2
  %51 = call i32 @pptp_firm_rev_print(i32* %48, i32** %50)
  %52 = load %struct.pptp_msg_sccrq*, %struct.pptp_msg_sccrq** %5, align 8
  %53 = getelementptr inbounds %struct.pptp_msg_sccrq, %struct.pptp_msg_sccrq* %52, i32 0, i32 1
  %54 = load i32*, i32** %53, align 8
  %55 = call i32 @ND_TCHECK(i32* %54)
  %56 = load i32*, i32** %3, align 8
  %57 = load %struct.pptp_msg_sccrq*, %struct.pptp_msg_sccrq** %5, align 8
  %58 = getelementptr inbounds %struct.pptp_msg_sccrq, %struct.pptp_msg_sccrq* %57, i32 0, i32 1
  %59 = load i32*, i32** %58, align 8
  %60 = getelementptr inbounds i32, i32* %59, i64 0
  %61 = call i32 @pptp_hostname_print(i32* %56, i32* %60)
  %62 = load %struct.pptp_msg_sccrq*, %struct.pptp_msg_sccrq** %5, align 8
  %63 = getelementptr inbounds %struct.pptp_msg_sccrq, %struct.pptp_msg_sccrq* %62, i32 0, i32 0
  %64 = load i32*, i32** %63, align 8
  %65 = call i32 @ND_TCHECK(i32* %64)
  %66 = load i32*, i32** %3, align 8
  %67 = load %struct.pptp_msg_sccrq*, %struct.pptp_msg_sccrq** %5, align 8
  %68 = getelementptr inbounds %struct.pptp_msg_sccrq, %struct.pptp_msg_sccrq* %67, i32 0, i32 0
  %69 = load i32*, i32** %68, align 8
  %70 = getelementptr inbounds i32, i32* %69, i64 0
  %71 = call i32 @pptp_vendor_print(i32* %66, i32* %70)
  br label %78

72:                                               ; No predecessors!
  %73 = load i32*, i32** %3, align 8
  %74 = load i32, i32* @tstr, align 4
  %75 = sext i32 %74 to i64
  %76 = inttoptr i64 %75 to i32*
  %77 = call i32 @ND_PRINT(i32* %76)
  br label %78

78:                                               ; preds = %72, %2
  ret void
}

declare dso_local i32 @ND_TCHECK(i32*) #1

declare dso_local i32 @pptp_proto_ver_print(i32*, i32**) #1

declare dso_local i32 @pptp_framing_cap_print(i32*, i32**) #1

declare dso_local i32 @pptp_bearer_cap_print(i32*, i32**) #1

declare dso_local i32 @pptp_max_channel_print(i32*, i32**) #1

declare dso_local i32 @pptp_firm_rev_print(i32*, i32**) #1

declare dso_local i32 @pptp_hostname_print(i32*, i32*) #1

declare dso_local i32 @pptp_vendor_print(i32*, i32*) #1

declare dso_local i32 @ND_PRINT(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
